--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -4,11 +4,14 @@ spring.application.name=discovery-service
 server.port=8761
 
 #Eureka 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
 eureka.instance.prefer-ip-address=false
 eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+eureka.server.eviction-interval-timer-in-ms=1000
+
 
 #Log
 logging.level.root=INFO
