--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -13,10 +13,11 @@ info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
 #Eureka
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=false
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
 eureka.client.health-check.enabled=true
 
 #Zuul
