Adição de configuração de docker compose

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
 #Eureka
-eureka.instance.hostname=localhost
+eureka.instance.hostname=discovery-service
 eureka.instance.prefer-ip-address=false
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
