--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,6 @@ services:
             context: discovery-service
             dockerfile: Dockerfile
         image: discovery-service:latest
-        ports:
-            - "8761:8761"
-        networks:
-            - restaurante-network
     gateway-service:
         container_name: gateway-service
         build:
@@ -18,8 +14,5 @@ services:
         image: gateway-service:latest
         ports:
             - "8080:8080"
-        networks:
-            - restaurante-network
-networks:
-    restaurante-network:
-        driver: bridge
+        links:
+            - discovery-service
